Fix sidebar spacing and create horizontal scrollable mobile menu

--- a/src/components/layout/AdminLayout.module.css
+++ b/src/components/layout/AdminLayout.module.css
@@ -15,7 +15,7 @@
 }
 
 .main.collapsed {
-    margin-left: 72px;
+    margin-left: 80px;
 }
 
 .main.mobile {
